# Grout

./: .gitignore  .gitmodules  Grout.sln  README.md  crossfile.txt  folder_structure.json  meson.build  premake5.lua  walk.py
Grout/: Grout.vcxproj  Grout.vcxproj.filters  cpp.hint
Grout/src/: Grout.h  grtpch.cpp  grtpch.h
Grout/src/Grout/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Grout/src/Grout/Buffers/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Grout/src/Grout/Core/: Application.cpp  Application.h  Assert.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Macros.h  Time.cpp  Time.h  Timestep.cpp  Timestep.h  Window.h
Grout/src/Grout/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Grout/src/Grout/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Grout/src/Grout/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Components.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererContext.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Grout/src/Grout/Scene/: Object.cpp  Object.h  Transform.cpp  Transform.h
Grout/src/Grout/Shaders/: Shader.cpp  Shader.h  test.frag  test.v
Grout/src/Plataform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRendererLoader.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Grout/src/Plataform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Grout/third-part/: meson.build
Grout/third-part/Glad/: Glad.vcxproj  meson.build  premake5.lua
Grout/third-part/assimp/: meson.build
Grout/third-part/stb/: stb_image.cpp  stb_image.h
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Sandbox/assets/objects/fish/: fish_idle.mtl
Sandbox/assets/objects/ship/: Low Poly ShipWreck.mtl
Sandbox/assets/objects/tower/: tower.mtl  tower_with_ground.mtl
Sandbox/assets/shaders/: low_poly_mesh.glsl  mesh.glsl  model.glsl  skybox.glsl  texture.glsl
Sandbox/src/: BoidWorldLayer.cpp  BoidWorldLayer.h  Boids.cpp  Boids.h  Flock.cpp  Flock.h  SandboxApp.cpp  Spawner.cpp  Spawner.h  World.cpp  World.h
Test/: imgui.ini
Test/assets/shaders/: light.glsl  low_poly_mesh.glsl  model.glsl
Test/libglfw3-3.dll.p/: libglfw3-3.dll.symbols
Test/libimgui.dll.p/: libimgui.dll.symbols
Test/src/: Hello.cpp
bin-int/Debug-x64/Grout/: Grout.dll.recipe  Grout.ilk  vc142.idb
bin-int/Debug-x64/Grout/Grout.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Grout.write.1u.tlog  link.23824.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  Sandbox.ilk  vc142.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
subprojects/: imguizmo.wrap
subprojects/ImGuizmo-1.83/: .meson-subproject-wrap-hash.txt  ImGuizmo.cpp
subprojects/ImGuizmo-1.83/example/: imgui.cpp  imgui.h  main.cpp
subprojects/imgui-1.91.3/: .meson-subproject-wrap-hash.txt  imconfig.h
subprojects/imgui-1.91.6-docking/: .meson-subproject-wrap-hash.txt
subprojects/spdlog-1.14.1/: .meson-subproject-wrap-hash.txt
